--- a/Deploy/Backend/.env
+++ b/Deploy/Backend/.env
@@ -1,5 +1,7 @@
 PORT = 3000
-MONGODB_URI=mongodb://localhost:27017/ChatApp
-MONGODB_URI2=mongodb+srv://ak77721001:AmitSingh2648@cluster0.mtumk.mongodb.net/ChatApp?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI1=mongodb://localhost:27017/ChatApp
+MONGODB_URI="mongodb+srv://ak77721001:AmitSingh2648@cluster0.mtumk.mongodb.net/ChatApp?retryWrites=true&w=majority&appName=Cluster0"
 
 JWT_TOKEN=FjSMc71hF73xwpvGJcgyonDiO12jVSoeU+Yj0uLTt90=
+
+NODE_ENV="production"
