--- a/Deploy/Backend/package.json
+++ b/Deploy/Backend/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "start": "node index.js",
+    "build": "npm install && npm install --prefix FrontEnd && npm run build --prefix FrontEnd"
   },
   "author": "Amit Kumar Singh",
   "license": "ISC",
