--- a/E-CommerceApp/package.json
+++ b/E-CommerceApp/package.json
@@ -18,7 +18,8 @@
     "@mui/material": "^6.1.1",
     "react": "^18.3.1",
     "react-alice-carousel": "^2.9.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
