--- a/HopsitalManagementSystem/Backend/config/config.env
+++ b/HopsitalManagementSystem/Backend/config/config.env
@@ -1,6 +1,7 @@
 PORT=4000
 
 MONGODB_URI=mongodb://localhost:27017
+DBNAME=HOPITAL_MANAGEMENT_SYSTEM
 
 FRONTEND_URI=http://localhost:5173
 DASHBOARD_URI=http://localhost:5174
