--- a/.gitignore
+++ b/.gitignore
@@ -73,8 +73,9 @@ web_modules/
 .env
 .env.test
 .env.production
-config/
+config/*
 config.env
+db
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
