--- a/.gitignore
+++ b/.gitignore
@@ -74,8 +74,8 @@ web_modules/
 .env.test
 .env.production
 config/*
+config/
 config.env
-db
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
