--- a/EcommerceApp2/frontend/package.json
+++ b/EcommerceApp2/frontend/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.7",
     "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-alice-carousel": "^2.9.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
