--- a/EcommerceApp2/frontend/package.json
+++ b/EcommerceApp2/frontend/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.7",
     "@mui/material": "^6.1.7",
+    "@react-spring/web": "^9.7.5",
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
     "moment": "^2.30.1",
