--- a/EcommerceApp2/frontend/package.json
+++ b/EcommerceApp2/frontend/package.json
@@ -17,6 +17,7 @@
     "@react-spring/web": "^9.7.5",
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
+    "country-state-city": "^3.2.1",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-alice-carousel": "^2.9.1",
@@ -24,6 +25,7 @@
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
+    "react-select": "^5.8.3",
     "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.6"
   },
