--- a/EcommerceApp2/backend/package.json
+++ b/EcommerceApp2/backend/package.json
@@ -20,9 +20,11 @@
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.0",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
     "openai": "^4.72.0",
+    "razorpay": "^2.9.5",
     "validator": "^13.12.0"
   },
   "devDependencies": {
