--- a/AmiShop/frontend/package.json
+++ b/AmiShop/frontend/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^6.1.7",
     "@react-spring/web": "^9.7.5",
     "@reduxjs/toolkit": "^2.3.0",
+    "aos": "^2.3.4",
     "axios": "^1.7.7",
     "country-state-city": "^3.2.1",
     "moment": "^2.30.1",
