--- a/AmiShop/frontend/package.json
+++ b/AmiShop/frontend/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
     "@mui/icons-material": "^6.1.7",
     "@mui/material": "^6.1.7",
     "@react-spring/web": "^9.7.5",
