--- a/AmiShop/frontend/package.json
+++ b/AmiShop/frontend/package.json
@@ -30,7 +30,8 @@
     "react-router-dom": "^6.28.0",
     "react-select": "^5.8.3",
     "react-spinners": "^0.14.1",
-    "react-toastify": "^10.0.6"
+    "react-toastify": "^10.0.6",
+    "tailwind-scrollbar": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
