--- a/AmiShop/frontend/package.json
+++ b/AmiShop/frontend/package.json
@@ -16,11 +16,13 @@
     "@heroicons/react": "^2.2.0",
     "@mui/icons-material": "^6.1.7",
     "@mui/material": "^6.1.7",
+    "@mui/x-date-pickers": "^7.23.3",
     "@react-spring/web": "^9.7.5",
     "@reduxjs/toolkit": "^2.3.0",
     "aos": "^2.3.4",
     "axios": "^1.7.7",
     "country-state-city": "^3.2.1",
+    "dayjs": "^1.11.13",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-alice-carousel": "^2.9.1",
