Update package dependencies and refactor frontend components
- Replaced `bcrypt` with `bcryptjs` in both backend `package.json` and `package-lock.json` for improved compatibility.
- Added new dependencies in frontend `package.json` including `@radix-ui/react-label`, `@radix-ui/react-tabs`, and `axios` to enhance UI components and API interactions.
- Updated the `App.jsx` component to render the `Login` page instead of a static greeting, improving the user experience.

These changes aim to streamline authentication processes and enhance the overall functionality of the LMS application.

--- a/LMS/Backend/package.json
+++ b/LMS/Backend/package.json
@@ -3,13 +3,15 @@
   "version": "1.0.0",
   "description": "New LMS Backend",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "dev start"
+    "dev": "nodemon src/index.js",
+    "start": "node src/index.js"
   },
-  "author": "AMIT KUMAR",
+  "author": "AMIT_KUMAR",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
