--- a/WebAnd/package.json
+++ b/WebAnd/package.json
@@ -10,11 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^9.121.4",
+    "@react-three/fiber": "^8.17.12",
     "framer-motion": "^12.0.6",
+    "gsap": "^3.12.7",
+    "locomotive-scroll": "^4.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
-    "react-router-dom": "^7.1.3"
+    "react-router-dom": "^7.1.3",
+    "three": "^0.172.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
