--- a/WebAnd/package.json
+++ b/WebAnd/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
-    "three": "^0.172.0"
+    "three": "^0.172.0",
+    "typed.js": "^2.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
