--- a/WebAnd/package.json
+++ b/WebAnd/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@react-three/drei": "^9.121.4",
-    "@react-three/fiber": "^8.17.12",
+    "@react-three/fiber": "^8.17.14",
     "framer-motion": "^12.0.6",
     "gsap": "^3.12.7",
     "locomotive-scroll": "^4.1.4",
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
+    "react-three-fiber": "^6.0.13",
     "three": "^0.172.0",
     "typed.js": "^2.1.0"
   },
