--- a/WebAnd/package.json
+++ b/WebAnd/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@react-three/drei": "^9.121.4",
     "@react-three/fiber": "^8.17.14",
+    "axios": "^1.7.9",
     "framer-motion": "^12.0.6",
     "gsap": "^3.12.7",
     "locomotive-scroll": "^4.1.4",
@@ -20,6 +22,7 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
     "react-three-fiber": "^6.0.13",
+    "react-toastify": "^11.0.3",
     "three": "^0.172.0",
     "typed.js": "^2.1.0"
   },
