--- a/WebAnd/package.json
+++ b/WebAnd/package.json
@@ -13,6 +13,7 @@
     "@emailjs/browser": "^4.4.1",
     "@react-three/drei": "^9.121.4",
     "@react-three/fiber": "^8.17.14",
+    "@tailwindcss/vite": "^4.0.3",
     "axios": "^1.7.9",
     "framer-motion": "^12.0.6",
     "gsap": "^3.12.7",
@@ -23,8 +24,11 @@
     "react-router-dom": "^7.1.3",
     "react-three-fiber": "^6.0.13",
     "react-toastify": "^11.0.3",
+    "simplex-noise": "^4.0.3",
+    "tailwindcss": "^4.0.3",
     "three": "^0.172.0",
-    "typed.js": "^2.1.0"
+    "typed.js": "^2.1.0",
+    "zdog": "^1.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
@@ -36,8 +40,6 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3",
     "vite": "^5.2.0"
   }
 }
