--- a/AmiShop/frontend/package.json
+++ b/AmiShop/frontend/package.json
@@ -20,7 +20,8 @@
     "@react-spring/web": "^9.7.5",
     "@reduxjs/toolkit": "^2.3.0",
     "aos": "^2.3.4",
-    "axios": "^1.7.7",
+    "axios": "^1.9.0",
+    "caniuse-lite": "^1.0.30001721",
     "country-state-city": "^3.2.1",
     "dayjs": "^1.11.13",
     "moment": "^2.30.1",
